# robinhood-wizard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/notes/: 2026-06-27-bucket-deploy-completeness-kickoff.md
docs/superpowers/plans/: 2026-06-21-phase-0-scaffold-and-auth.md  (+13 more)
src/rh_wizard/: __init__.py  masking.py
strategies.example/: sample-buckets.yaml  sample-momentum.yaml
tests/integration/: test_live_auth.py  test_live_compile.py  test_live_discovery.py  test_live_fundamentals.py  test_live_portfolio.py  test_live_research.py  test_live_run.py
tests/unit/: test_account_selection.py  test_allocator.py  test_allocator_purity.py  test_broker_batching.py  test_broker_client.py  test_broker_fundamentals.py  test_broker_orders.py  test_broker_reads.py  test_bucket_recommender.py  test_callback.py  test_cli_approval.py  test_cli_auth.py  test_cli_compile.py  test_cli_data.py  test_cli_history.py  test_cli_portfolio.py  test_cli_run.py  test_cycle.py  test_data_source_protocol.py  test_deploy.py  test_deploy_purity.py  test_enrich.py  test_journal.py  test_journal_runs.py  test_llm_config.py  test_llm_provider.py  test_llm_retry.py  test_llm_schema_safety.py  test_masking.py  test_mcp_noise.py  test_models_allocation.py  test_models_bucket.py  test_models_compile.py  test_models_discovery.py  test_models_market_context.py  test_models_order.py  test_models_plan.py  test_models_portfolio.py  test_models_research_cycle.py  test_models_risk.py  (+36 more)
(+73 files in other folders)
