[project]
name = "rh-wizard"
version = "0.1.0"
description = "AI-powered stock-trading agent framework (Robinhood Wizard)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13",
    "strands-agents>=1.44.0",
    "typer>=0.12",
]

[project.scripts]
wizard = "rh_wizard.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rh_wizard"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]
